Massa små ändringar i frontend, främst i kontakt och simskola. Lagt till en settings.json i .vscode för att underlätta utvecklingen.

--- a/frontend/Kontakt/kontaktuppgifter.html
+++ b/frontend/Kontakt/kontaktuppgifter.html
@@ -11,6 +11,7 @@
           <img src="https://cdn.sportadmin.se/699/h/253/da7e82b6b03eada009368cf8c5fa4e1d313be4184507039b9319f6dd4d4bcde7_L.png" alt="Ljungby Simsällskap logotyp" style="height:68px;width:auto;margin-bottom:10px" />
           <p style="font-size:14px;color:#2f4c61;margin:0;">Direktvägar till rätt person och område.</p>
         </div>
+          <p style="font-size:13px;color:#5f7a8f;margin:6px 0 0 0;">Om knapparna inte &ouml;ppnar n&aring;gon mailapp kan du kopiera e-postadressen i knappen.</p>
       
         <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;align-items:stretch">
       
@@ -87,6 +88,7 @@
     </div>
   </div>
 </div>
+
 
 
 
