--- a/frontend/simskola/fritidskortet.html
+++ b/frontend/simskola/fritidskortet.html
@@ -180,11 +180,12 @@
               Är du osäker på något steg, eller undrar hur det fungerar i just din situation, hör gärna av dig så hjälper vi dig.
             </p>
 
-            <p style="margin: 0 0 16px 0;">
+            <p style="margin: 0 0 10px 0;">
               <a href="mailto:faktura@ljungbyss.se" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:14px; font-weight: 600; color: #0077c8; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; text-decoration: none; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
-                faktura@ljungbyss.se
+                &Ouml;ppna mailapp
               </a>
             </p>
+            <p style="margin:0 0 16px 0; font-size:14px; line-height:1.6; color:#4a6a7e;">E-post: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">faktura@ljungbyss.se</span></p>
 
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               Fler kontaktvägar hittar du på vår
@@ -196,3 +197,4 @@
     </div>
   </div>
 </div>
+
