--- a/frontend/Kontakt/Ledare.html
+++ b/frontend/Kontakt/Ledare.html
@@ -61,10 +61,11 @@
           </article>
         </div>
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Så här ansöker du</h2>
-        <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Skicka ett kort mejl med namn, ålder och varför du vill vara med. Vi återkopplar med nästa steg.</p>
+        <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Skicka ett kort mejl med namn, ålder och varför du vill vara med. Vi återkopplar med nästa steg. Om knappen inte &ouml;ppnar n&aring;gon mailapp kan du kopiera adressen under.</p>
         <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="mailto:info@ljungbyss.se" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">Maila info@ljungbyss.se</a>
+          <a href="mailto:info@ljungbyss.se" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">&Ouml;ppna mailapp</a>
         </div>
+        <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;">E-post: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
       </section>
 
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
@@ -85,4 +86,6 @@
     </div>
   </div>
 </div>
+
+
 
