Premium clean-pass, UTF-fixar och städning av simskola/kontakt

--- a/frontend/Kontakt/Hjalp_Till_I_Lss.html
+++ b/frontend/Kontakt/Hjalp_Till_I_Lss.html
@@ -17,26 +17,26 @@
               <div style="margin-top:8px;opacity:0.5;color:#cfe8fb;font-size:12px;letter-spacing:2px;">~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~</div>
             </section>
 
-            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
               <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;letter-spacing:-0.2px;font-size:22px;">S&aring; fungerar det</h2>
               <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Du beh&ouml;ver inte best&auml;mma allt direkt. Vi rekommenderar att du testar i liten skala och sedan justerar efter tid och intresse.</p>
               <div style="margin-top:12px;border:1px solid rgba(0,119,200,0.22);border-radius:14px;background:linear-gradient(135deg,#f2f9ff 0%,#eaf5ff 100%);padding:12px 14px;color:#1f4f74;font-size:14px;line-height:1.55;">
                 <strong>Enkel start:</strong> v&auml;lj en roll f&ouml;r ett tillf&auml;lle, k&auml;nn efter och byt vid behov. Du kan enkelt justera omfattning eller roll senare.
               </div>
               <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:16px;">
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);padding:18px;box-shadow:0 8px 24px rgba(12,68,117,0.08)">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);padding:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07)">
                   <span style="display:inline-flex;align-items:center;justify-content:center;width:26px;height:26px;margin-bottom:8px;border-radius:999px;background:#e8f4ff;color:#005a99;font-size:12px;font-weight:700;">1</span>
                   <h3 style="margin:0 0 8px 0;color:#005a99;line-height:1.3;font-size:18px;">V&auml;lj niv&aring;</h3>
                   <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;">B&ouml;rja med fr&aring;gan: vill du bidra ibland, regelbundet eller strategiskt i styrelsen?</p>
                   <p style="margin:8px 0 0 0;color:#5f7a8f;line-height:1.5;font-size:13px;">Tar cirka 2 minuter att landa i en startniv&aring;.</p>
                 </article>
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);padding:18px;box-shadow:0 8px 24px rgba(12,68,117,0.08)">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);padding:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07)">
                   <span style="display:inline-flex;align-items:center;justify-content:center;width:26px;height:26px;margin-bottom:8px;border-radius:999px;background:#e8f4ff;color:#005a99;font-size:12px;font-weight:700;">2</span>
                   <h3 style="margin:0 0 8px 0;color:#005a99;line-height:1.3;font-size:18px;">Testa rollen</h3>
                   <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;">Du f&aring;r introduktion p&aring; plats, tydliga uppgifter och st&ouml;d av ansvarig.</p>
                   <p style="margin:8px 0 0 0;color:#5f7a8f;line-height:1.5;font-size:13px;">M&aring;let &auml;r att du ska k&auml;nna dig trygg direkt.</p>
                 </article>
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);padding:18px;box-shadow:0 8px 24px rgba(12,68,117,0.08)">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);padding:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07)">
                   <span style="display:inline-flex;align-items:center;justify-content:center;width:26px;height:26px;margin-bottom:8px;border-radius:999px;background:#e8f4ff;color:#005a99;font-size:12px;font-weight:700;">3</span>
                   <h3 style="margin:0 0 8px 0;color:#005a99;line-height:1.3;font-size:18px;">Forts&auml;tt i din takt</h3>
                   <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;">Justera omfattning efter vardag och s&auml;song. Det &auml;r enkelt att byta tempo senare.</p>
@@ -45,23 +45,19 @@
               </div>
             </section>
 
-            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:20px 24px;margin-bottom:18px;">
+            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:20px 24px;margin-bottom:18px;">
               <h2 style="margin:0 0 8px 0;color:#005a99;line-height:1.3;font-size:20px;">Redo att testa en roll?</h2>
-              <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">B&ouml;rja enkelt: skicka ett kort mejl om vad du vill prova s&aring; hj&auml;lper vi dig vidare. Om knappen inte &ouml;ppnar n&aring;gon mailapp kan du kopiera adressen nedan.</p>
-              <div style="margin-top:12px;display:flex;align-items:center;gap:10px;flex-wrap:wrap;">
-                <a href="mailto:info@ljungbyss.se?subject=Hjalp%20till%20i%20LSS" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 22px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">&Ouml;ppna mailapp</a>
-                <a href="https://www.ljungbyss.se/start/?ID=460051" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 22px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Kontaktportal</a>
-              </div>
+              <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Skicka ett kort mejl med vilken roll du vill prova. Full kontaktsektion med knappar finns l&auml;ngst ner.</p>
               <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;">E-post: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
             </section>
 
-            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
               <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;letter-spacing:-0.2px;font-size:22px;">Roll&ouml;versikt</h2>
               <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">En snabb och tydlig &ouml;verblick av alla roller. Ingen l&auml;s mer-knapp - all viktig info finns direkt i rutorna.</p>
 
               <h3 style="margin:18px 0 10px 0;color:#005a99;font-size:17px;line-height:1.3;">T&auml;vlingsroller</h3>
               <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:8px;">
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#127850;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Kioskansvarig</h3>
@@ -71,7 +67,7 @@
                   <p style="margin:4px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.5;"><strong>Passar dig som:</strong> gillar service, struktur och tydliga uppgifter.</p>
                 </article>
 
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#9200;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Funktion&auml;r</h3>
@@ -84,7 +80,7 @@
 
               <h3 style="margin:20px 0 10px 0;color:#005a99;font-size:17px;line-height:1.3;">Styrelseroller</h3>
               <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:8px;">
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#128188;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Ordf&ouml;rande</h3>
@@ -94,7 +90,7 @@
                   <p style="margin:4px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.5;"><strong>Passar dig som:</strong> har ledarskap, struktur och god kommunikation.</p>
                 </article>
 
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#128179;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Kass&ouml;r</h3>
@@ -104,7 +100,7 @@
                   <p style="margin:4px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.5;"><strong>Passar dig som:</strong> &auml;r noggrann och gillar ordning i siffror.</p>
                 </article>
 
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#128221;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Sekreterare</h3>
@@ -114,7 +110,7 @@
                   <p style="margin:4px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.5;"><strong>Passar dig som:</strong> gillar struktur och administration.</p>
                 </article>
 
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#128101;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Ledamot</h3>
@@ -124,7 +120,7 @@
                   <p style="margin:4px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.5;"><strong>Passar dig som:</strong> vill bidra strategiskt och samarbeta.</p>
                 </article>
 
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#129309;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Suppleant</h3>
@@ -137,7 +133,7 @@
 
               <h3 style="margin:20px 0 10px 0;color:#005a99;font-size:17px;line-height:1.3;">Flexibla insatser</h3>
               <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:8px;">
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#127880;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">F&ouml;r&auml;ldrakommitt&eacute;n</h3>
@@ -147,7 +143,7 @@
                   <p style="margin:4px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.5;"><strong>Passar dig som:</strong> vill bidra socialt och praktiskt.</p>
                 </article>
 
-                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:18px;">
+                <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:18px;">
                   <div style="display:flex;align-items:flex-start;gap:10px;">
                     <div style="width:30px;height:30px;border-radius:10px;background:linear-gradient(135deg,#0077c8 0%,#00a0e9 100%);color:#fff;display:flex;align-items:center;justify-content:center;font-size:15px;flex-shrink:0;">&#128247;</div>
                     <h3 style="margin:2px 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Foto/film</h3>
@@ -159,7 +155,7 @@
               </div>
             </section>
 
-            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
               <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;letter-spacing:-0.2px;font-size:22px;">Snabbt beslutsst&ouml;d</h2>
               <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">V&auml;lj den rad som st&auml;mmer b&auml;st just nu och b&ouml;rja d&auml;r.</p>
 
@@ -187,7 +183,7 @@
               </div>
             </section>
 
-            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+            <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
               <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;letter-spacing:-0.2px;font-size:22px;">Ta n&auml;sta steg</h2>
               <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Maila oss och skriv g&auml;rna &quot;Hj&auml;lp till i LSS&quot; i &auml;mnesraden. Ber&auml;tta kort vad du gillar att g&ouml;ra och hur mycket tid du vill l&auml;gga. Om knappen inte fungerar i din webbl&auml;sare kan du kopiera adressen under.</p>
               <div style="margin-top:14px;display:flex;align-items:center;gap:10px;flex-wrap:wrap;">
@@ -199,4 +195,5 @@
     </div>
   </div>
 </div>
+
 
