--- a/frontend/simskola/avgifter.html
+++ b/frontend/simskola/avgifter.html
@@ -1,4 +1,4 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
       <div style="margin-bottom: 16px; font-size: 14px">
@@ -117,7 +117,7 @@
 
           <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
             <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Vanliga frågor om betalning</h2>
-            <details style="margin:0 0 10px 0;"><summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vilka betalningssätt finns?</summary><p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Vi använder Billmate. Du kan betala med kort, faktura eller delbetalning.</p></details>
+            <details style="margin:0 0 10px 0;"><summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vilka betalningssätt finns?</summary><p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Vi använder Qvickly. Du kan betala med kort, faktura eller delbetalning.</p></details>
             <details style="margin:0 0 10px 0;"><summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vad händer om fakturan inte betalas i tid?</summary><p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Påminnelse skickas. Om fakturan fortsatt är obetald kan platsen förloras.</p></details>
             <details style="margin:0;"><summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Får jag återbetalning vid sjukdom?</summary><p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Frånvaro på grund av sjukdom eller skada kan ersättas mot läkarintyg för missade tillfällen.</p></details>
           </section>
@@ -128,3 +128,5 @@
     </div>
   </div>
 </div>
+
+
