--- a/frontend/simskola/vanligt-stallda-fragor.html
+++ b/frontend/simskola/vanligt-stallda-fragor.html
@@ -1,13 +1,13 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h1 style="margin:0 0 10px 0;font-size:28px;line-height:1.2;color:#005a99;">Vanligt ställda frågor</h1>
         <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:15px;max-width:65ch;">Här hittar du svar på de vanligaste frågorna om simskola, bokning, betalning och terminsinformation i Ljungby Simsällskap.</p>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">📅 Före terminsstart</h2>
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">F&ouml;re terminsstart</h2>
         <p style="margin:0 0 10px 0;color:#5f7a8f;line-height:1.6;font-size:14px;">Detta gäller innan terminen börjar och inför val av grupp.</p>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">När startar terminerna?</summary>
@@ -27,8 +27,8 @@
         </details>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">🧾 Bokning</h2>
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Bokning</h2>
         <p style="margin:0 0 10px 0;color:#5f7a8f;line-height:1.6;font-size:14px;">Detta gäller vid bokningsstart, nivåval och ändringar av plats.</p>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur bokar jag plats?</summary>
@@ -52,12 +52,12 @@
         </details>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">💳 Betalning och avbokning</h2>
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Betalning och avbokning</h2>
         <p style="margin:0 0 10px 0;color:#5f7a8f;line-height:1.6;font-size:14px;">Detta gäller betalningssätt, medlemsavgift och återbetalningsregler.</p>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vilka betalningssätt finns?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Betalning hanteras via Billmate med kort, faktura eller delbetalning. Se även <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;">Avgifter</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Betalning hanteras via Qvickly med kort, faktura eller delbetalning. Se även <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;">Avgifter</a>.</p>
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur ofta betalas medlemsavgiften?</summary>
@@ -73,8 +73,8 @@
         </details>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">🏊 Inför och under termin</h2>
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Inf&ouml;r och under termin</h2>
         <p style="margin:0 0 10px 0;color:#5f7a8f;line-height:1.6;font-size:14px;">Detta gäller lektioner, utrustning, byten och stöd under terminen.</p>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur lång är en lektion?</summary>
@@ -94,7 +94,7 @@
         </details>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Snabblänkar</h2>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
           <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">Boka simskola</a>
@@ -105,3 +105,6 @@
     </div>
   </div>
 </div>
+
+
+
