--- a/frontend/Hem/Webshop-Produkt-mall.html
+++ b/frontend/Hem/Webshop-Produkt-mall.html
@@ -1,22 +1,22 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=575279" style="display:inline-flex;align-items:center;justify-content:center;padding:10px 16px;min-height:40px;border-radius:6px;border:1px solid #dde9f5;text-decoration:none;font-size:14px;font-weight:600;background:#ffffff;color:#005a99;margin-bottom:14px;">← Webshop</a>
         <h1 style="margin:0 0 8px 0;font-size:28px;line-height:1.2;color:#005a99;">Craft klubbshorts - blå</h1>
         <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:15px;max-width:65ch;">Bekväma och praktiska klubbshorts för träning, aktivitet och vardag.</p>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px;align-items:start;">
-          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:16px;">
+          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
             <div style="width:100%;height:300px;background:#f5fbff;border:1px solid #dde9f5;border-radius:12px;display:flex;align-items:center;justify-content:center;overflow:hidden;">
               <img src="https://cdn.sportadmin.se/699/h/253/3fe942b491bf337fb6421a41efd1fd85224fd1e25141d419ab1f5d7fa3723a08_L.png" alt="Craft klubbshorts blå" style="width:100%;height:100%;object-fit:contain;">
             </div>
             <p style="margin:10px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Blå klubbshorts från Craft med klubbprofil.</p>
           </article>
 
-          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:16px;">
+          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
             <p style="margin:0 0 8px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Varianter</p>
             <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Unisex · Färg: blå (Craft)</p>
 
@@ -37,7 +37,7 @@
         </div>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Produktinformation</h2>
         <ul style="margin:0;padding-left:20px;color:#2f4c61;font-size:14px;line-height:1.7;">
           <li>Passform: unisex</li>
@@ -49,5 +49,7 @@
     </div>
   </div>
 </div>
+
+
 
 
