--- a/frontend/Hem/Webshop.html
+++ b/frontend/Hem/Webshop.html
@@ -1,11 +1,11 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
       <div style="max-width:895px;margin:0 auto;padding:20px;background:#f5fbff;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif">
       
         <h2 style="text-align:left;margin:0 0 24px 0;font-size:20px;font-weight:700;color:#005a99;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif">Ljungby Simsällskap – Profilprodukter</h2>
       
-        <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:16px;margin-bottom:18px;">
+        <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;margin-bottom:18px;">
           <div style="display:flex;align-items:center;gap:12px;flex-wrap:wrap;">
             <img src="https://cdn.sportadmin.se/699/h/253/25d021973feb25729189ccabba2e7bcdc1519800f363621946dbef890f985979_L.png" alt="Profilh&ouml;rnan logotyp" style="height:28px;width:auto;background:#1a1a1a;border-radius:4px;padding:4px 8px;">
             <p style="margin:0;color:#2f4c61;font-size:14px;line-height:1.6;">Vissa profilprodukter k&ouml;ps hos Profilh&ouml;rnan, Fabriksgatan 17 i Ljungby. Andra produkter k&ouml;ps via LSS-kontoret.</p>
@@ -170,3 +170,5 @@
     </div>
   </div>
 </div>
+
+
