--- a/frontend/Kontakt/Kontaktportal.html
+++ b/frontend/Kontakt/Kontaktportal.html
@@ -1,7 +1,7 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h1 style="margin:0 0 10px 0;font-size:28px;line-height:1.2;color:#005a99;">Kontaktportal</h1>
         <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:15px;max-width:65ch;">Välj väg nedan så guidar vi dig rätt. Snabbt, tydligt och utan krångel.</p>
       </section>
@@ -12,7 +12,7 @@
         <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#005a99;">Se kontaktuppgifter</a>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Välj område</h2>
         <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px;margin-top:12px;">
           <article style="background:linear-gradient(135deg,#2e7d32 0%,#1b5e20 100%);border:1px solid rgba(46,125,50,0.25);border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(27,94,32,0.2);">
@@ -41,7 +41,7 @@
         </div>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Vanliga bokningsärenden</h2>
         <ul style="margin:0;padding-left:18px;line-height:1.8;color:#2f4c61;font-size:14px;">
           <li>Fel grupp bokad? Kontakta kansliet så hjälper vi dig byta nivå eller tid.</li>
@@ -50,7 +50,7 @@
         </ul>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Snabblänkar</h2>
         <ul style="margin:0;padding-left:18px;line-height:1.8;color:#2f4c61;font-size:14px;">
           <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="color:#0077c8;font-weight:600;text-decoration:none;">Styrelse och ledare</a></li>
@@ -60,4 +60,6 @@
     </div>
   </div>
 </div>
+
+
 
