--- a/frontend/Kontakt/Ledare.html
+++ b/frontend/Kontakt/Ledare.html
@@ -1,91 +1,92 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
       <section style="border-radius:20px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);box-shadow:0 8px 22px rgba(12,68,117,0.14);padding:28px;margin-bottom:18px;color:#ffffff;">
         <p style="margin:0 0 8px 0;font-size:13px;font-weight:600;letter-spacing:0.06em;text-transform:uppercase;color:rgba(255,255,255,0.9);">Rekrytering av ledare</p>
-        <h1 style="margin:0 0 10px 0;font-size:28px;line-height:1.2;color:#ffffff;">Gör skillnad: bli ledare hos Ljungby Simsällskap</h1>
-        <p style="margin:0;color:rgba(255,255,255,0.92);line-height:1.6;font-size:15px;max-width:65ch;">Tänk dig att stå vid bassängkanten och se ett barn ta sitt första riktiga simtag. Nu söker Ljungby Simsällskap nya ledare som gillar vatten, tycker om att arbeta med barn och vill utvecklas som personer.</p>
+        <h1 style="margin:0 0 10px 0;font-size:28px;line-height:1.2;color:#ffffff;">GÃ¶r skillnad: bli ledare hos Ljungby SimsÃ¤llskap</h1>
+        <p style="margin:0;color:rgba(255,255,255,0.92);line-height:1.6;font-size:15px;max-width:65ch;">TÃ¤nk dig att stÃ¥ vid bassÃ¤ngkanten och se ett barn ta sitt fÃ¶rsta riktiga simtag. Nu sÃ¶ker Ljungby SimsÃ¤llskap nya ledare som gillar vatten, tycker om att arbeta med barn och vill utvecklas som personer.</p>
         <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
-          <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">Ingen tidigare ledarerfarenhet krävs</span>
-          <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">Utbildning och stöd ingår</span>
-          <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">Du gör skillnad direkt</span>
+          <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">Ingen tidigare ledarerfarenhet krÃ¤vs</span>
+          <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">Utbildning och stÃ¶d ingÃ¥r</span>
+          <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">Du gÃ¶r skillnad direkt</span>
         </div>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <figure style="margin:0;text-align:center;">
-          <img src="https://ljungbyss.web.sportadmin.se/images/253/53193/4FA48DFD-6AA6-45A2-9366-967C88048C72_1506069_1280.JPG?v=2023-10-20%2015:37:10" alt="Ledare och simmare i Ljungby Simsällskap vid bassängen" style="max-width:100%;height:auto;border-radius:12px;border:1px solid #dde9f5;box-shadow:0 6px 18px rgba(12,68,117,0.08);" />
-          <figcaption style="margin-top:8px;font-size:13px;color:#5f7a8f;">Ljungby Simsällskap - gemenskap vid bassängen.</figcaption>
+          <img src="https://ljungbyss.web.sportadmin.se/images/253/53193/4FA48DFD-6AA6-45A2-9366-967C88048C72_1506069_1280.JPG?v=2023-10-20%2015:37:10" alt="Ledare och simmare i Ljungby SimsÃ¤llskap vid bassÃ¤ngen" style="max-width:100%;height:auto;border-radius:12px;border:1px solid #dde9f5;box-shadow:0 6px 18px rgba(12,68,117,0.08);" />
+          <figcaption style="margin-top:8px;font-size:13px;color:#5f7a8f;">Ljungby SimsÃ¤llskap - gemenskap vid bassÃ¤ngen.</figcaption>
         </figure>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Vi söker dig som</h2>
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Vi sÃ¶ker dig som</h2>
         <ul style="margin:0;padding-left:20px;color:#2f4c61;font-size:15px;line-height:1.7;">
-          <li>är minst 13 år, född 2010 eller tidigare</li>
-          <li>är simkunnig: 200 meter varav 150 meter på mage och 50 meter på rygg</li>
-          <li>är positiv, ansvarsfull och gillar att arbeta med barn</li>
+          <li>Ã¤r minst 13 Ã¥r, fÃ¶dd 2010 eller tidigare</li>
+          <li>Ã¤r simkunnig: 200 meter varav 150 meter pÃ¥ mage och 50 meter pÃ¥ rygg</li>
+          <li>Ã¤r positiv, ansvarsfull och gillar att arbeta med barn</li>
         </ul>
-        <p style="margin:12px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Tidigare erfarenhet av simning eller ledarskap är ett plus, men inget krav.</p>
+        <p style="margin:12px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Tidigare erfarenhet av simning eller ledarskap Ã¤r ett plus, men inget krav.</p>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Det här erbjuder vi</h2>
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Det hÃ¤r erbjuder vi</h2>
         <ul style="margin:0;padding-left:20px;color:#2f4c61;font-size:15px;line-height:1.7;">
-          <li>välkomnande gemenskap i en trygg förening</li>
-          <li>möjlighet till utbildning och utveckling som ledare</li>
-          <li>erfarenhet och ansvar som stärker självförtroendet och CV</li>
-          <li>roliga aktiviteter och evenemang under året</li>
+          <li>vÃ¤lkomnande gemenskap i en trygg fÃ¶rening</li>
+          <li>mÃ¶jlighet till utbildning och utveckling som ledare</li>
+          <li>erfarenhet och ansvar som stÃ¤rker sjÃ¤lvfÃ¶rtroendet och CV</li>
+          <li>roliga aktiviteter och evenemang under Ã¥ret</li>
         </ul>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Viktigt att veta</h2>
-        <p style="margin:0 0 10px 0;color:#2f4c61;line-height:1.6;font-size:14px;">Alla ledare lämnar årligen in ett utdrag ur belastningsregistret. Information om hur du beställer utdraget ges i början av antagningsprocessen.</p>
-        <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;">Du engageras ideellt, men får utbildning, stöd och erfarenhet som stärker både ansvarskänsla och ledarskap.</p>
+        <p style="margin:0 0 10px 0;color:#2f4c61;line-height:1.6;font-size:14px;">Alla ledare lÃ¤mnar Ã¥rligen in ett utdrag ur belastningsregistret. Information om hur du bestÃ¤ller utdraget ges i bÃ¶rjan av antagningsprocessen.</p>
+        <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;">Du engageras ideellt, men fÃ¥r utbildning, stÃ¶d och erfarenhet som stÃ¤rker bÃ¥de ansvarskÃ¤nsla och ledarskap.</p>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-bottom:14px;">
-          <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:16px;">
+          <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
             <p style="margin:0 0 6px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Steg 1</p>
             <p style="margin:0;color:#005a99;font-size:16px;font-weight:700;line-height:1.4;">Skicka intresse</p>
           </article>
-          <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:16px;">
+          <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
             <p style="margin:0 0 6px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Steg 2</p>
-            <p style="margin:0;color:#005a99;font-size:16px;font-weight:700;line-height:1.4;">Introduktion och stöd</p>
+            <p style="margin:0;color:#005a99;font-size:16px;font-weight:700;line-height:1.4;">Introduktion och stÃ¶d</p>
           </article>
-          <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:16px;">
+          <article style="border-radius:20px;background:#ffffff;border:1px solid rgba(0,90,153,0.12);box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
             <p style="margin:0 0 6px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Steg 3</p>
-            <p style="margin:0;color:#005a99;font-size:16px;font-weight:700;line-height:1.4;">Börja i din takt</p>
+            <p style="margin:0;color:#005a99;font-size:16px;font-weight:700;line-height:1.4;">BÃ¶rja i din takt</p>
           </article>
         </div>
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Så här ansöker du</h2>
-        <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Skicka ett kort mejl med namn, ålder och varför du vill vara med. Vi återkopplar med nästa steg. Om knappen inte &ouml;ppnar n&aring;gon mailapp kan du kopiera adressen under.</p>
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">SÃ¥ hÃ¤r ansÃ¶ker du</h2>
+        <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Skicka ett kort mejl med namn, Ã¥lder och varfÃ¶r du vill vara med. Vi Ã¥terkopplar med nÃ¤sta steg. Om knappen inte &ouml;ppnar n&aring;gon mailapp kan du kopiera adressen under.</p>
         <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
           <a href="mailto:info@ljungbyss.se" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">&Ouml;ppna mailapp</a>
         </div>
         <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;">E-post: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Vanliga frågor</h2>
+      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Vanliga frÃ¥gor</h2>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur mycket tid tar uppdraget?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Det beror på grupp och schema, men oftast rör det sig om några timmar i veckan. Vi anpassar tillsammans efter din tid.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Det beror pÃ¥ grupp och schema, men oftast rÃ¶r det sig om nÃ¥gra timmar i veckan. Vi anpassar tillsammans efter din tid.</p>
         </details>
         <details style="margin:0 0 10px 0;">
-          <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Behöver jag erfarenhet?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Nej, du får stöd, introduktion och chans att växa i rollen. Viktigast är att du gillar barn och vatten.</p>
+          <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">BehÃ¶ver jag erfarenhet?</summary>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Nej, du fÃ¥r stÃ¶d, introduktion och chans att vÃ¤xa i rollen. Viktigast Ã¤r att du gillar barn och vatten.</p>
         </details>
         <details style="margin:0;">
-          <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Får jag utbildning?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Ja, Ljungby Simsällskap erbjuder utbildning för nya ledare, både internt och genom Svenska Simförbundet.</p>
+          <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">FÃ¥r jag utbildning?</summary>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Ja, Ljungby SimsÃ¤llskap erbjuder utbildning fÃ¶r nya ledare, bÃ¥de internt och genom Svenska SimfÃ¶rbundet.</p>
         </details>
       </section>
     </div>
   </div>
 </div>
+
 
 
 
