--- a/frontend/simskola/simskolegrupper/pingvinen.html
+++ b/frontend/simskola/simskolegrupper/pingvinen.html
@@ -1,11 +1,11 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
       <div style="margin-bottom: 24px; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 32px rgba(0,90,153,0.15);">
             <img src="https://www.ljungbyss.se/images/253/16920/4941F5FB-7F7E-4CC5-9A1D-9DBDA2E1A204_1721443.JPG" alt="Simskolegruppen Pingvinen" style="width: 100%; height: auto; display: block;">
           </div>
 
-          <div style="background: rgba(255,255,255,0.85); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 36px 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
+          <div style="background: rgba(255,255,255,0.85); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 36px 32px; margin-bottom:18px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
             
             <div style="display: flex; align-items: center; gap: 16px; margin-bottom: 20px; flex-wrap: wrap;">
               <div style="width: 52px; height: 52px; background: linear-gradient(135deg, #2196F3 0%, #1976D2 100%); border-radius: 14px; display: flex; align-items: center; justify-content: center; font-size: 26px; box-shadow: 0 4px 20px rgba(33,150,243,0.3);">
@@ -36,7 +36,7 @@
               </ul>
             </div>
 
-            <div style="flex: 1 1 calc(50% - 10px); min-width: 260px; background: rgba(255,255,255,0.95); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 24px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
+            <div style="flex: 1 1 calc(50% - 10px); min-width: 260px; background: rgba(255,255,255,0.95); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 24px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
               <h3 style="margin: 0 0 12px 0; font-size: 17px; font-weight: 700; color: #005a99;">📝 Anmälan</h3>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
                 Bokning sker i SportAdmin när anmälan är öppen. Se <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8; text-decoration:none; font-weight: 600;">Avgifter</a>.
@@ -49,7 +49,7 @@
             </div>
           </div>
 
-          <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
+          <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
             <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🎯 Mål och delmoment</h2>
             <p style="margin: 0 0 16px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               I Pingvinen tränar vi vidare på simning på djupt vatten och utvecklar barnens teknik.
@@ -62,7 +62,7 @@
             </ul>
           </div>
 
-          <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
+          <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
             <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🏅 Märken</h2>
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               I Pingvinen kan barnen ta simmärkena Pingvinen Silver och Pingvinen Guld. Se sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;">Simmärken</a>.
@@ -70,13 +70,16 @@
           </div>
 
           <div style="display: flex; justify-content: space-between; padding-top: 20px;">
-            <a href="https://www.ljungbyss.se/sida/?ID=161881" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 8px 24px rgba(12,68,117,0.08);;min-height:44px">
+            <a href="https://www.ljungbyss.se/sida/?ID=161881" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px">
               ← Bläckfisken
             </a>
-            <a href="https://www.ljungbyss.se/sida/?ID=161883" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 8px 24px rgba(12,68,117,0.08);;min-height:44px">
+            <a href="https://www.ljungbyss.se/sida/?ID=161883" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px">
               Fisken Steg 1 →
             </a>
           </div>
     </div>
   </div>
 </div>
+
+
+
