--- a/frontend/simskola/simskolegrupper/simskolegrupper.html
+++ b/frontend/simskola/simskolegrupper/simskolegrupper.html
@@ -1,4 +1,4 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
 
   <div style="max-width:895px;margin:0 auto;">
@@ -160,7 +160,7 @@
       </div>
     </div>
 
-    <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+    <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
       <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Innan du bokar</h2>
       <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;">
         <article style="border-radius:14px;background:#ffffff;border:1px solid #dde9f5;padding:16px;">
@@ -285,7 +285,7 @@
     </div>
 
 
-    <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
+    <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
       <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Vanliga frågor om simskolan</h2>
       <details style="margin:0 0 10px 0;">
         <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur lång är en lektion?</summary>
@@ -320,3 +320,4 @@
 </div>
 </div>
 </div>
+
