Omstrukturera designregler, skapa nya kontaktsidor och uppdatera meny

--- a/frontend/Meny.html
+++ b/frontend/Meny.html
@@ -291,6 +291,9 @@
         <h2><span class="badge">Kontakt</span> Kontaktvägar</h2>
         <ul class="links">
           <li><a class="link-item" href="./Kontakt/Kontaktportal.html"><span class="link-title">Kontaktportal</span><span class="path">Kontakt/Kontaktportal.html</span></a></li>
+          <li><a class="link-item" href="./Kontakt/Om_Klubben.html"><span class="link-title">Om klubben</span><span class="path">Kontakt/Om_Klubben.html</span></a></li>
+          <li><a class="link-item" href="./Kontakt/Historia.html"><span class="link-title">Historia</span><span class="path">Kontakt/Historia.html</span></a></li>
+          <li><a class="link-item" href="./Kontakt/Styrelsen.html"><span class="link-title">Styrelsen</span><span class="path">Kontakt/Styrelsen.html</span></a></li>
           <li><a class="link-item" href="./Kontakt/kontaktuppgifter.html"><span class="link-title">Kontaktuppgifter</span><span class="path">Kontakt/kontaktuppgifter.html</span></a></li>
           <li><a class="link-item" href="./Kontakt/Ledare.html"><span class="link-title">Bli ledare</span><span class="path">Kontakt/Ledare.html</span></a></li>
           <li><a class="link-item" href="./Kontakt/Hjalp_Till_I_Lss.html"><span class="link-title">Hjalp till i LSS</span><span class="path">Kontakt/Hjalp_Till_I_Lss.html</span></a></li>
